# eemo

./: .gitignore  AUTHORS  ChangeLog  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac  eemo.rc  eemo.spec.in  eemo_mux.rc  eemo_sensor.rc
config/: Makefile.am  dnsdistribution.conf  sample-eemo.conf  sample-eemo_mux.conf  sample-eemo_sensor.conf
m4/: acx_dlopen.m4  acx_pcap.m4  acx_pthread.m4  acx_sqlite3.m4  acx_strict.m4
scripts/: Makefile.am  dnsdenatex-anon.py  eemo.init  eemo_generate_cert.sh  eemo_mux.init  eemo_sensor.init  generate_cert.sh  get_pfx2as.py  plot-darkmon.py  plot-darkmon.sh
src/: LICENSE  Makefile  Makefile.am  cidrmatch.c  cidrmatch.h  dns_handler.c  dns_handler.h  dns_parser.c  dns_parser.h  dns_qhandler.c  dns_qhandler.h  dns_types.h  eemo.h  eemo_api.h  eemo_capture.c  eemo_capture.h  eemo_config.c  eemo_config.h  eemo_fio.c  eemo_fio.h  eemo_handlefactory.c  eemo_handlefactory.h  eemo_list.c  eemo_list.h  eemo_log.c  eemo_log.h  eemo_main.c  eemo_modules.c  eemo_modules.h  eemo_mux_client.c  eemo_mux_client.h  eemo_mux_cmdxfer.c  eemo_mux_cmdxfer.h  eemo_mux_main.c  eemo_mux_muxer.c  eemo_mux_muxer.h  eemo_mux_proto.h  eemo_mux_queue.c  eemo_mux_queue.h  eemo_packet.c  (+42 more)
src/plugins/: Makefile.am  eemo_plugin_log.c  eemo_plugin_log.h
src/plugins/auth_vs_client/: Makefile.am  auth_vs_client.c
src/plugins/csvqlog/: csvqlog.c
src/plugins/darkmon/: darkmon.c
src/plugins/darkscanex/: darkscanex.c
src/plugins/demo/: Makefile.am  eemo_demo_entry.c
src/plugins/dnsdenatex/: dnsdenatex.c
src/plugins/dnsdistribution/: Makefile.am  eemo_dnsdistribution_entry.c  eemo_dnsdistribution_stats.c  eemo_dnsdistribution_stats.h
src/plugins/dnsinflux/: dnsinflux_collector.c  dnsinflux_collector.h  dnsinflux_entry.c  dnsinflux_itemmgr.c  dnsinflux_itemmgr.h
src/plugins/dnskeyex/: Makefile.am  dnskeyex.c
src/plugins/dnsqfw/: Makefile.am  eemo_dnsqfw_aggr.c  eemo_dnsqfw_aggr.h  eemo_dnsqfw_entry.c
src/plugins/dnsqfw/testsink/: Makefile.am  dnsqfw_sink_main.c
src/plugins/dnsqrlog/: Makefile.am  eemo_dnsqrlog.c  eemo_dnsqrlog.h  eemo_dnsqrlog_entry.c
src/plugins/dnssensorfw/: Makefile.am  eemo_dnssensorfw_entry.c  eemo_dnssensorfw_ipfw.c  eemo_dnssensorfw_ipfw.h
src/plugins/dnssensorfw/testsink/: Makefile.am  dnssensor_sink.c
src/plugins/dnsstats/: Makefile.am  eemo_dnsstats_entry.c  eemo_dnsstats_stats.c  eemo_dnsstats_stats.h
src/plugins/dnsstats/cacti/: Makefile.am  README-dnsstats  dnsstats_cacti.sh  eemo_cacti_DNSSEC_OK.xml  eemo_cacti_DNSSEC_OK_percent.xml  eemo_cacti_DNSSEC_queries.xml  eemo_cacti_EDNS0_buffer_distribution.xml  eemo_cacti_EDNS0_percent.xml  eemo_cacti_EDNS0_use.xml  eemo_cacti_IP_types.xml  eemo_cacti_common_queries.xml  eemo_cacti_protocol_types.xml  eemo_cacti_query_classes.xml  eemo_cacti_total_load.xml
src/plugins/dnstapout/: dnstapout.c
src/plugins/dnsuniq/: dnsuniq.c
src/plugins/dnszabbix/: Makefile.am  eemo_dnszabbix_entry.c  eemo_dnszabbix_stats.c  eemo_dnszabbix_stats.h
src/plugins/dumppcap/: Makefile.am  dumppcap.c
src/plugins/ecsmonitor/: Makefile.am  ecsmonitor.c
src/plugins/honas/: honas.c
src/plugins/icmpfragmon/: Makefile.am  eemo_icmpfragmon_aggr.c  eemo_icmpfragmon_aggr.h  eemo_icmpfragmon_entry.c
src/plugins/namex/: Makefile.am  namex.c
src/plugins/nonecsmonitor/: Makefile.am  nonecsmonitor.c
src/plugins/qandaslog/: qandaslog.c
src/plugins/qrsizedist/: qrsizedist.c
src/plugins/qsrcips/: qsrcips.c
src/plugins/querypop/: querypop.c
src/plugins/sldpop/: sldpop.c
src/plugins/udprexmit/: Makefile.am  eemo_udprexmit.c
src/plugins/uniqdnsip/: Makefile.am  uniqdnsip.c
test/: testpcap.c
